opam-version: "2.0"
name: "pgocaml"
version: "4.2.3"
synopsis: "Native OCaml interface to PostgreSQL databases"
description: """
PGOCaml provides an interface to PostgreSQL databases for OCaml applications.
Note that it speaks the PostgreSQL wire protocol directly, and therefore does
not need to create bindings to the PostgreSQL libpq C library.
The PPX syntax extension is now packaged separately as 'pgocaml_ppx'.
You will want to take a look at it if you're considering using PGOCaml.
"""
maintainer: "dario.teixeira@nleyten.com"
authors: ["Richard W.M. Jones <rich@annexia.org>"]
homepage: "https://github.com/darioteixeira/pgocaml"
bug-reports: "https://github.com/darioteixeira/pgocaml/issues"
dev-repo: "git+https://github.com/darioteixeira/pgocaml.git"
license: "LGPL-2.0 with OCaml linking exception"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "calendar"
  "csv"
  "dune" {>= "1.10"}
  "hex"
  "ocaml" {>= "4.07"}
  "ppx_sexp_conv"
  "re"
  "ppx_deriving" {>= "4.0"}
  "rresult"
  "sexplib"
]
