opam-version: "2.0"
name: "pgocaml_ppx"
version: "4.2.2"
synopsis: "PPX extension for PGOCaml"
description: """
PGOCaml provides an interface to PostgreSQL databases for OCaml applications.
This PPX syntax extension enables one to directly embed SQL statements inside
the OCaml code. The extension uses the 'describe' feature of PostgreSQL to
obtain type information about the database. This allows PGOCaml to check at
compile-time if the program is indeed consistent with the database structure.
"""
maintainer: "dario.teixeira@nleyten.com"
authors: ["Richard W.M. Jones <rich@annexia.org>"]
homepage: "https://github.com/darioteixeira/pgocaml"
bug-reports: "https://github.com/darioteixeira/pgocaml/issues"
dev-repo: "git+https://github.com/darioteixeira/pgocaml.git"
license: "LGPL-2.0 with OCaml linking exception"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {>= "1.10"}
  "ocaml" {>= "4.07"}
  "pgocaml" {= version}
  "ppxlib" {>= "0.16.0"}
  "ppx_optcomp"
]
